{
  "version": 4,
  "terraform_version": "0.12.29",
  "serial": 10,
  "lineage": "b808d161-3d71-2b9f-3c7c-ab69a3462aee",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "IPADDR",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0df6f576636ac9217",
            "public_dns": "ec2-13-238-191-191.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "13.238.191.191",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "InternetGW",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:646093908012:internet-gateway/igw-0c77cb7d94054d01e",
            "id": "igw-0c77cb7d94054d01e",
            "owner_id": "646093908012",
            "vpc_id": "vpc-0aea37028204e0c86"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "acl",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:646093908012:network-acl/acl-036fa8acf7fc2f892",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-036fa8acf7fc2f892",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 110,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "owner_id": "646093908012",
            "subnet_id": null,
            "subnet_ids": [
              "subnet-02230c02f051ec491",
              "subnet-0780c60653b040d6a"
            ],
            "tags": {
              "Name": "Acl Publ"
            },
            "vpc_id": "vpc-0aea37028204e0c86"
          },
          "dependencies": [
            "module.vpc.aws_subnet.public_subnet1",
            "module.vpc.aws_subnet.public_subnet2",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private_acl",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:646093908012:network-acl/acl-0f4491bb59305d1ee",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 110,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 80
              },
              {
                "action": "allow",
                "cidr_block": "20.0.1.0/24",
                "from_port": 3306,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 95,
                "to_port": 3306
              },
              {
                "action": "allow",
                "cidr_block": "20.0.3.0/24",
                "from_port": 3306,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 96,
                "to_port": 3306
              }
            ],
            "id": "acl-0f4491bb59305d1ee",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "180.150.58.136/32",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 90,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "20.0.0.0/16",
                "from_port": 443,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 110,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "20.0.1.0/24",
                "from_port": 3306,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 95,
                "to_port": 3306
              },
              {
                "action": "allow",
                "cidr_block": "20.0.3.0/24",
                "from_port": 3306,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 96,
                "to_port": 3306
              },
              {
                "action": "deny",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 130,
                "to_port": 443
              },
              {
                "action": "deny",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 120,
                "to_port": 80
              }
            ],
            "owner_id": "646093908012",
            "subnet_id": null,
            "subnet_ids": [
              "subnet-0c8eafdecc4f78a0b",
              "subnet-0cda361b3bb0a1e02"
            ],
            "tags": {
              "Name": "Acl Prv"
            },
            "vpc_id": "vpc-0aea37028204e0c86"
          },
          "dependencies": [
            "module.vpc.aws_subnet.private_subnet1",
            "module.vpc.aws_subnet.private_subnet2",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:646093908012:subnet/subnet-0c8eafdecc4f78a0b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "20.0.1.0/24",
            "id": "subnet-0c8eafdecc4f78a0b",
            "map_public_ip_on_launch": false,
            "owner_id": "646093908012",
            "tags": {
              "Name": "private_subnet1",
              "Tier": "private"
            },
            "vpc_id": "vpc-0aea37028204e0c86"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:646093908012:subnet/subnet-0cda361b3bb0a1e02",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "20.0.3.0/24",
            "id": "subnet-0cda361b3bb0a1e02",
            "map_public_ip_on_launch": false,
            "owner_id": "646093908012",
            "tags": {
              "Name": "private_subnet2",
              "Tier": "private"
            },
            "vpc_id": "vpc-0aea37028204e0c86"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet1",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:646093908012:subnet/subnet-02230c02f051ec491",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "20.0.0.0/24",
            "id": "subnet-02230c02f051ec491",
            "map_public_ip_on_launch": true,
            "owner_id": "646093908012",
            "tags": {
              "Name": "public_subnet1",
              "Tier": "public"
            },
            "vpc_id": "vpc-0aea37028204e0c86"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet2",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:646093908012:subnet/subnet-0780c60653b040d6a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "20.0.2.0/24",
            "id": "subnet-0780c60653b040d6a",
            "map_public_ip_on_launch": true,
            "owner_id": "646093908012",
            "tags": {
              "Name": "public_subnet2",
              "Tier": "public"
            },
            "vpc_id": "vpc-0aea37028204e0c86"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider.aws",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:646093908012:vpc/vpc-0aea37028204e0c86",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "20.0.0.0/16",
            "default_network_acl_id": "acl-06109d39b5dbea6e4",
            "default_route_table_id": "rtb-05ca8dd509ffd7273",
            "default_security_group_id": "sg-07be930abd4a6e49f",
            "dhcp_options_id": "dopt-ddbc90ba",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0aea37028204e0c86",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-05ca8dd509ffd7273",
            "owner_id": "646093908012"
          }
        }
      ]
    }
  ]
}